Fix alignment of header items

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
   flex-direction: column;
 }
 .header {
-  flex: 1 100px;
   display: flex;
   flex-direction: column;
 }
@@ -44,8 +43,16 @@ body {
 
 .header-content {
   display: flex;
-  padding: 64px;
   gap: 32px;
+  padding: 100px 200px;
+}
+
+.hero {
+  flex: 1;
+}
+
+.image {
+  flex: 1;
 }
 
 .hero > h1 {
@@ -61,17 +68,67 @@ body {
   margin: 8px 0;
 }
 
-img {
+.image > img {
   width: 100%;
+  max-height: 165px;
+  object-fit: cover;
+  object-position: top;
 }
 
 .main {
   background-color: #fff;
-  flex: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main > h2 {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  margin-top: 32px;
+}
+
+.main-content {
+  flex: 2 300px;
+  display: flex;
+  gap: 32px;
+  padding: 32px 250px;
+}
+
+.quote-content {
+  flex: 2 300px;
+  background-color: #e5e7eb;
+  padding: 100px 250px;
+}
+
+.quote-content > p {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  color: #1f2937;
+}
+
+.quote-content > .author {
+  display: block;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: bold;
+  text-align: right;
+  padding: 0 32px;
+  color: #1f2937;
+}
+
+.subscription-content {
+  flex: 1 200px;
 }
 
 .footer {
   height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #e5e7eb;
 }
 
 h1,
@@ -95,4 +152,8 @@ button {
   border: none;
   color: #fff;
   font-weight: bold;
+}
+
+p {
+  margin: 0;
 }
